--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-<h1>Hello Coursera! It's a great Course! I like coursera!<h1/>
+<h1>Hello Coursera! It's a great Course! hello<h1/>
 </body>
 </html>
